[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "dj-x-supercharged"
version = "0.1.0"
description = "Hybrid Spotify + X (Twitter) playlist generator. Mints a private playlist seeded by your top artists, what they post on X, and what you've liked."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "dj-x-supercharged contributors" }]
keywords = ["spotify", "twitter", "x", "playlist", "music", "recommender", "grok", "xai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
djx = "djx.cli:app"

[project.urls]
Homepage = "https://github.com/RenLes/dj-x-supercharged"
Issues = "https://github.com/RenLes/dj-x-supercharged/issues"
Changelog = "https://github.com/RenLes/dj-x-supercharged/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["djx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
